--- a/app/src/i18n/en.json
+++ b/app/src/i18n/en.json
@@ -105,6 +105,23 @@
     "LOCAL_DOCUMENT": "Local document",
     "REPLY": "Reply"
   },
+  "DECLARATION": {
+    "NEW_DECLARATION": "New Declaration",
+    "CREATE_NEW_DECLARATION": "Create new declaration",
+    "PATIENT_DATA": "Patient Data",
+    "SAVE_AND_LOCK": "Save and lock",
+    "LOCK": "Lock",
+    "UNLOCK": "Unlock",
+    "REOPEN": "Reopen",
+    "DECLARATION_CLOSED": "Declaration closed",
+    "CLOSED_WITHOUT_DECLARATION": "Closed without declaration",
+    "WAITINGLIST": "Waitinglist",
+    "SEE_CURRENT_WAITINGLIST": "See the current waitinglist",
+    "SEARCH_NAME_CPR_DECLARATION": "Search for name, CPR or declaration number", 
+    "ADVANCED_SEARCH": "Advanced search",
+    "DECLARATION_NUMBER": "Declaration number",
+    "DECLARATION": "Declaration"
+  },
   "SIMPLE_CASE": {
     "TYPE": "Standard case"
   },
