added checks for invalid forms

--- a/app/src/i18n/da.json
+++ b/app/src/i18n/da.json
@@ -111,8 +111,10 @@
     "PATIENT_DATA": "Patient Data",
     "SAVE_AND_LOCK": "Gem og afslut",
     "LOCK": "Afslut",
+    "LOCK_DECLARATION": "Afslut deklaration",
     "UNLOCK": "Genåben",
     "REOPEN": "Genåben",
+    "CLOSED": "Closed",
     "DECLARATION_CLOSED": "Erklæringen er aflsuttet",
     "CLOSED_WITHOUT_DECLARATION": "Afsluttet uden erklæring",
     "WAITINGLIST": "Venteliste",
