--- a/app/src/i18n/en.json
+++ b/app/src/i18n/en.json
@@ -110,9 +110,11 @@
     "CREATE_NEW_DECLARATION": "Create new declaration",
     "PATIENT_DATA": "Patient Data",
     "SAVE_AND_LOCK": "Save and lock",
+    "LOCK_DECLARATION": "Lock declaration",
     "LOCK": "Lock",
     "UNLOCK": "Unlock",
     "REOPEN": "Reopen",
+    "CLOSED": "Closed",
     "DECLARATION_CLOSED": "Declaration closed",
     "CLOSED_WITHOUT_DECLARATION": "Closed without declaration",
     "WAITINGLIST": "Waitinglist",
