text fixes, removed arrow from date picker and cpr validation;

--- a/app/src/i18n/da.json
+++ b/app/src/i18n/da.json
@@ -111,7 +111,7 @@
     "PATIENT_DATA": "Patient Data",
     "SAVE_AND_LOCK": "Gem og afslut",
     "LOCK": "Afslut",
-    "LOCK_DECLARATION": "Afslut deklaration",
+    "LOCK_DECLARATION": "Afslut",
     "UNLOCK": "Genåben",
     "REOPEN": "Genåben",
     "DECLARATION_CLOSED": "Erklæringen er aflsuttet",
