fixed changes and spelling errors found at meeting

--- a/app/src/i18n/da.json
+++ b/app/src/i18n/da.json
@@ -114,12 +114,12 @@
     "LOCK_DECLARATION": "Afslut",
     "UNLOCK": "Genåben",
     "REOPEN": "Genåben",
-    "DECLARATION_CLOSED": "Erklæringen er aflsuttet",
+    "DECLARATION_CLOSED": "Erklæringen er afsluttet",
     "CLOSED_WITHOUT_DECLARATION": "Afsluttet uden erklæring",
     "WAITINGLIST": "Venteliste",
-    "SEE_CURRENT_WAITINGLIST": "Se den akutelle venteliste",
-    "SEARCH_NAME_CPR_DECLARATION": "Søg efter navn, CPR eller erklæringsnummer", 
-    "ADVANCED_SEARCH": "Advanceret søgning",
+    "SEE_CURRENT_WAITINGLIST": "Se den aktuelle venteliste",
+    "SEARCH_NAME_CPR_DECLARATION": "Søg efter CPR, navn eller erklæringsnummer", 
+    "ADVANCED_SEARCH": "Avanceret søgning",
     "DECLARATION_NUMBER": "Erklæringsnummer",
     "DECLARATION": "Erklæring"
   },
