moved some services and filters into shared folder, create folder functionality and fixed breadcrumbs

--- a/app/src/i18n/da.json
+++ b/app/src/i18n/da.json
@@ -103,7 +103,9 @@
     "CLOSEEDIT": "Luk redigering",
     "FILETYPE": "Dokumenttype",
     "LOCAL_DOCUMENT": "Lokalt dokument",
-    "REPLY": "Besvar"
+    "REPLY": "Besvar",
+    "MISSING_FOLDER": "Mappen findes ikke",
+    "NEW_FOLDER": "Ny mappe"
   },
   "DECLARATION": {
     "NEW_DECLARATION": "Ny erklæring",
