--- a/app/src/i18n/da.json
+++ b/app/src/i18n/da.json
@@ -42,7 +42,7 @@
     "CLOSED_WITHOUT_DECLARATION": "Afsluttet uden erklæring",
     "WAITINGLIST": "Venteliste",
     "SEE_CURRENT_WAITINGLIST": "Se den aktuelle venteliste",
-    "SEARCH_NAME_CPR": "Søg efter navn eller CPR nummer",
+    "SEARCH_NAME_CPR": "Søg efter navn, sagsnummer eller CPR-nummer",
     "ADVANCED_SEARCH": "Avanceret søgning",
     "DECLARATION_NUMBER": "Sagsnummer",
     "DECLARATION": "Erklæring"
