minor bugfixes for 25919

--- a/app/src/i18n/da.json
+++ b/app/src/i18n/da.json
@@ -49,6 +49,7 @@
     "doctor": "Læge",
     "rulingCourt": "Retten i",
     "rulingDate": "Kendelsesdato",
+    "journalNumber": "Journalnummer",
     "referingAgency": "Henvisende instans",
     "observationDate": "Observation Påbegyndt",
     "declarationType": "Kendelse/samtykke"
