--- a/app/src/i18n/da.json
+++ b/app/src/i18n/da.json
@@ -28,7 +28,7 @@
     "CLOSEEDIT": "Luk redigering",
     "NEW_FOLDER": "Ny mappe",
     "UPLOAD_TEMPLATE": "Overfør nye skabelon",
-    "ERKLAERING": "Erklæring",
+    "KENDELSE": "Kendelse",
      "SAMTYKKE": "Samtykke"
   },
   "DECLARATION": {
