--- a/app/src/i18n/da.json
+++ b/app/src/i18n/da.json
@@ -102,7 +102,8 @@
   },
   "MEMBER": {
     "NAME": "Navn",
-    "ROLE": "Rolle"
+    "ROLE": "Rolle",
+    "EMAIL": "Email"
   },
   "MENU": {
     "LOGOUT": "Log ud"
