--- a/app/src/i18n/da.json
+++ b/app/src/i18n/da.json
@@ -6,6 +6,7 @@
     "ACTIONS": "Handlinger",
     "REMOVE": "Fjern",
     "SURETOREMOVE": "Vil du fjerne",
+    "SURETORENAME": "Vil du omdøbe",
     "ADD": "Tilføj",
     "SEND": "Send",
     "NAME": "Navn",
