--- a/app/src/i18n/en.json
+++ b/app/src/i18n/en.json
@@ -14,6 +14,7 @@
     "ACTIONS": "Actions",
     "REMOVE": "Remove",
     "SURETOREMOVE": "Do you want to remove",
+    "SURETORENAME": "Do you want to rename",
     "NEW": "New",
     "ADD_NEW": "Add new",
     "ADD": "Add",
