--- a/app/src/i18n/da.json
+++ b/app/src/i18n/da.json
@@ -5,6 +5,8 @@
     "CANCEL": "Annullér",
     "ACTIONS": "Handlinger",
     "REMOVE": "Fjern",
+    "MOVE": "Flyt",
+    "CHOOSEFOLDER": "Vælg mappe",
     "SURETOREMOVE": "Vil du fjerne",
     "ADD": "Tilføj",
     "SEND": "Send",
