--- a/app/src/i18n/da.json
+++ b/app/src/i18n/da.json
@@ -35,7 +35,8 @@
      "SAMTYKKE": "Samtykke",
     "HISTORY": "Historik",
     "LAST_MODIFIED": "Senest ændret",
-    "LAST_MODIFIED_BY": "Senest ændret af"
+    "LAST_MODIFIED_BY": "Senest ændret af",
+    "FLOWCHART": "Flowchart"
   },
   "DECLARATION": {
     "NEW_DECLARATION": "Ny sag",
