--- a/app/src/i18n/da.json
+++ b/app/src/i18n/da.json
@@ -42,7 +42,7 @@
     "ALLE" : "Alle",
     "VENTELISTE" : "Venteliste",
     "INDLAGTE" : "Indlagte",
-    "VENTEDEGR" : "Ventende GR",
+    "VENTEDEGR" : "Ventende Grønlandske",
     "MINESAGER" : "Mine sager"
   },
   "DECLARATION": {
