--- a/app/src/i18n/da.json
+++ b/app/src/i18n/da.json
@@ -1,5 +1,6 @@
 ﻿{
   "COMMON": {
+    "DEFAULTMAILBODY" : "Anvend standardtekst",
     "EMAIL": "Email",
     "OK": "OK",
     "CANCEL": "Annullér",
