--- a/app/src/i18n/da.json
+++ b/app/src/i18n/da.json
@@ -53,6 +53,9 @@
     "SAVE_AND_LOCK": "Gem og afslut",
     "LOCK": "Afslut",
     "LOCK_DECLARATION": "Afslut",
+    "UNLOCK_DECLARATION": "Genåbn",
+    "SKIPFLOW": "Genåbn uden flowchart",
+    "KEEPFLOW": "Genåbn med flowchart",
     "UNLOCK": "Genåben",
     "REOPEN": "Genåben",
     "DECLARATION_CLOSED": "Sagen er afsluttet",
