--- a/app/src/i18n/da.json
+++ b/app/src/i18n/da.json
@@ -94,6 +94,7 @@
     "DASHBOARD": "Dashboard",
     "PRACTITIONERS": "Brugerrettigheder",
     "DOCUMENT_TEMPLATES": "Dokumentskabeloner",
+    "REPORTS": "Rapporter",
     "DOCTORS": "Læger",
     "PSYCHOLOGISTS": "Psykologer",
     "SOCIALWORKERS": "Socialrådgivere",
