styling of visitator html

--- a/app/src/i18n/da.json
+++ b/app/src/i18n/da.json
@@ -140,6 +140,7 @@
     "CPR": "CPR-nummer",
     "FORNAVN": "Fornavn",
     "EFTERNAVN": "Efternavn",
-    "HOVEDSIGTELSE": "Hovedsigtelse"
+    "HOVEDSIGTELSE": "Hovedsigtelse",
+    "VISITATION": "Visitation"
   }
 }
