1) Prepare frontend for new field "supervising doctor", 2) clean up some invalid HTML in flowchart_alle.html

--- a/app/src/i18n/da.json
+++ b/app/src/i18n/da.json
@@ -137,6 +137,7 @@
   "FLOWCHART": {
     "CREATED": "Sag oprettet",
     "DOKTOR": "Læge",
+    "SUPERVISING_DOCTOR": "Tiltrædes af læge",
     "CPR": "CPR-nummer",
     "FORNAVN": "Fornavn",
     "EFTERNAVN": "Efternavn",
