--- a/app/src/i18n/da.json
+++ b/app/src/i18n/da.json
@@ -43,7 +43,7 @@
     "IGANGVÆRENDE" : "Igangværende",
     "ARRESTANTER" : "Arrestanter",
     "ALLE" : "Alle",
-    "VENTELISTE" : "Venteliste",
+    "IKKEFORDELT" : "Ikke fordelt",
     "INDLAGTE" : "Indlagte",
     "VENTEDEGR" : "Ventende Grønlandske",
     "MINESAGER" : "Mine sager"
