--- a/app/src/i18n/en.json
+++ b/app/src/i18n/en.json
@@ -19,6 +19,7 @@
     "ADD_NEW": "Add new",
     "ADD": "Add",
     "SEND": "Send",
+    "SEND": "Send",
     "MOVE": "Move",
     "CHOOSEFOLDER": "Choose folder",
     "NAME": "Name",
