--- a/app/src/i18n/da.json
+++ b/app/src/i18n/da.json
@@ -13,6 +13,7 @@
     "SURETORENAME": "Vil du omdøbe",
     "ADD": "Tilføj",
     "SEND": "Send",
+    "PREVIEWSIGNATURE": "Se indsat underskrift",
     "NAME": "Navn",
     "CREATE": "Opret",
     "PREVIEW": "Preview",
