--- a/app/src/i18n/da.json
+++ b/app/src/i18n/da.json
@@ -21,6 +21,7 @@
     "DELETE": "Slet",
     "EDIT": "Redigér",
     "DOWNLOAD": "Download",
+    "BACK_TOEMAIL": "Tilbage til email",
     "UPLOAD": "Overfør",
     "CLOSE": "Luk",
     "TO": "Til",
