--- a/app/src/i18n/da.json
+++ b/app/src/i18n/da.json
@@ -109,7 +109,8 @@
     "ETHNICITIES": "Etniciteter",
     "STATUS": "Status",
     "NODECLARATION": "Afsluttet uden erklæring",
-    "EMAILAUTHORITIES": "Myndigheder"
+    "EMAILAUTHORITIES": "Myndigheder",
+    "CROP" : "beskær"
   },
   "LOGIN": {
     "LOGIN": "Log ind",
