--- a/app/src/i18n/da.json
+++ b/app/src/i18n/da.json
@@ -149,7 +149,7 @@
   },
   "SIGNATUR": {
     "UPLOADERROR": "den valgte filtype understøttes ikke - det skal være af typen jpeg",
-    "UPLOAD" : "upload (kun jpg filer understøttes)"
+    "UPLOAD" : "upload (kun pdf filer understøttes)"
 
   }
 }
