--- a/app/src/i18n/da.json
+++ b/app/src/i18n/da.json
@@ -48,6 +48,7 @@
     "IKKEFORDELT" : "Ikke fordelt",
     "INDLAGTE" : "Indlagte",
     "VENTEDEGR" : "Ventende Grønlandske",
+    "SUPOPL" : "supplerede opl.",
     "MINESAGER" : "Mine sager"
   },
   "DECLARATION": {
@@ -58,10 +59,10 @@
     "SAVE_AND_LOCK": "Gem og afslut",
     "LOCK": "Afslut",
     "LOCK_DECLARATION": "Afslut",
-    "UNLOCK_DECLARATION": "Genåbn",
-    "SKIPFLOW": "Genåbn uden flowchart",
-    "KEEPFLOW": "Genåbn med flowchart",
-    "UNLOCK": "Genåben",
+    "UNLOCK_DECLARATION": "Redigér",
+    "REOPENFORSUPOPL": "Genåben til Supplerende mentalerklæring",
+    "REOPENEDIT": "Redigering af patientdata",
+    "UNLOCK": "Redigér",
     "REOPEN": "Genåben",
     "DECLARATION_CLOSED": "Sagen er afsluttet",
     "CLOSED_WITHOUT_DECLARATION": "Afsluttet uden erklæring",
