fix for broken download of reports with zero hits

--- a/app/src/i18n/da.json
+++ b/app/src/i18n/da.json
@@ -58,12 +58,13 @@
     "PATIENT_DATA": "Patient Data",
     "SAVE_AND_LOCK": "Gem og afslut",
     "LOCK": "Afslut",
-    "LOCK_TMP": "Afslut midlertig rettelse",
+    "LOCK_TMP": "Afslut supplerende udt.",
     "LOCK_DECLARATION": "Afslut",
     "UNLOCK_DECLARATION": "Redigér",
     "REOPENFORSUPOPL": "Genåben til Supplerende udt.",
     "REOPENEDIT": "Redigering af patientdata",
     "UNLOCK": "Redigér",
+    "UNLOCK_BOTTON": "Næste",
     "REOPEN": "Genåben",
     "DECLARATION_CLOSED": "Sagen er afsluttet",
     "CLOSED_WITHOUT_DECLARATION": "Afsluttet uden erklæring",
