added chart for weeks

--- a/app/src/i18n/da.json
+++ b/app/src/i18n/da.json
@@ -22,6 +22,7 @@
     "EDIT": "Redigér",
     "DOWNLOAD": "Download",
     "BACK_TOEMAIL": "Tilbage til email",
+    "BACK_TOREPORT": "Tilbage til rapporter",
     "UPLOAD": "Overfør",
     "CLOSE": "Luk",
     "TO": "Til",
