ready for oda-test.rm.dk

--- a/app/src/i18n/da.json
+++ b/app/src/i18n/da.json
@@ -48,6 +48,7 @@
     "IKKEFORDELT" : "Ikke fordelt",
     "INDLAGTE" : "Indlagte",
     "VENTEDEGR" : "Ventende Grønlandske",
+    "IGANGGR" : "Igangværende Grønlandske",
     "SUPOPL" : "supplerende udt.",
     "MINESAGER" : "Mine sager"
   },
