--- a/app/src/i18n/da.json
+++ b/app/src/i18n/da.json
@@ -58,7 +58,7 @@
     "PATIENT_DATA": "Patient Data",
     "SAVE_AND_LOCK": "Gem og afslut",
     "LOCK": "Afslut",
-    "LOCK_TMP": "Afslut supplerende udt.",
+    "LOCK_TMP": "Afslut suppl.udt.",
     "LOCK_DECLARATION": "Afslut",
     "UNLOCK_DECLARATION": "Redigér",
     "REOPENFORSUPOPL": "Genåben til Supplerende udt.",
