--- a/app/src/i18n/da.json
+++ b/app/src/i18n/da.json
@@ -62,6 +62,7 @@
     "SAVE_AND_LOCK": "Gem og afslut",
     "LOCK": "Afslut",
     "LOCK_TMP": "Afslut suppl.udt.",
+    "LOCK_TMPOPENEDIT": "Afslut",
     "LOCK_DECLARATION": "Afslut",
     "UNLOCK_DECLARATION": "Redigér",
     "REOPENFORSUPOPL": "Genåben til Supplerende udt.",
