--- a/app/src/i18n/da.json
+++ b/app/src/i18n/da.json
@@ -84,7 +84,8 @@
     "journalNumber": "Journalnummer",
     "referingAgency": "Henvisende instans",
     "observationDate": "Observation Påbegyndt",
-    "declarationType": "Kendelse/samtykke"
+    "declarationType": "Kendelse/samtykke",
+    "KONKLUSKABELON_OPRET": "OPRET BERIGTIGELSE"
   },
   "DOCUMENT": {
     "DOCUMENT": "Dokument",
