changed redirect to a toast

--- a/app/src/i18n/da.json
+++ b/app/src/i18n/da.json
@@ -85,7 +85,7 @@
     "referingAgency": "Henvisende instans",
     "observationDate": "Observation Påbegyndt",
     "declarationType": "Kendelse/samtykke",
-    "SUPPLEREDEOPL_OPRET": "OPRET SUPPLEREDE OPL.",
+    "SUPPLEREDEOPL_OPRET": "OPRET SUPPLEREDE UDT.",
     "BERIGTIGELSE_OPRET": "OPRET BERIGTIGELSE"
   },
   "DOCUMENT": {
