--- a/app/src/i18n/da.json
+++ b/app/src/i18n/da.json
@@ -48,7 +48,7 @@
     "ARRESTANTER" : "Arrestanter",
     "ALLE" : "Alle",
     "IKKEFORDELT" : "Ikke fordelt",
-    "INDLAGTE" : "Indlagte",
+    "INDLAGTE" : "Under indlæggelse",
     "VENTEDEGR" : "Ventende Grønlandske",
     "IGANGGR" : "Igangværende Grønlandske",
     "SUPOPL" : "supplerende udt.",
@@ -148,6 +148,7 @@
     "CREATED": "Sag oprettet",
     "DOKTOR": "Læge",
     "SUPERVISING_DOCTOR": "Tiltrædes af læge",
+    "PSYCHOLIGST": "Psykolog",
     "CPR": "CPR-nummer",
     "FORNAVN": "Fornavn",
     "EFTERNAVN": "Efternavn",
