ready for test - removed some console.log

--- a/app/src/i18n/da.json
+++ b/app/src/i18n/da.json
@@ -67,6 +67,7 @@
     "UNLOCK_DECLARATION": "Redigér",
     "REOPENFORSUPOPL": "Genåben til Supplerende udt.",
     "REOPENEDIT": "Redigering af patientdata",
+    "UNDOCLOSECASE": "Annullér afslutning af sagen",
     "UNLOCK": "Redigér",
     "UNLOCK_BOTTON": "Næste",
     "REOPEN": "Genåben",
