--- a/app/src/i18n/da.json
+++ b/app/src/i18n/da.json
@@ -25,6 +25,7 @@
     "BACK_TOREPORT": "Tilbage til rapporter",
     "BACK_TOSEARCH": "Tilbage til søgning",
     "UPLOAD": "Overfør",
+    "DELETEOBS": "Slet Observand",
     "CLOSE": "Luk",
     "TO": "Til",
     "RENAME": "Omdøb",
